[tool.poetry]
name = "seed_brute"
version = "0.1.0"
description = ""
authors = ["Anton Mikhaylenko"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
pydantic = "^1.10.2"
loguru = "^0.6.0"
moto = "^4.0.7"
cryptography = "^38.0.2"
web3 = "^5.31.1"
pysha3 = "^1.0.2"
bip-utils = "^2.7.0"
numba = "^0.56.4"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
